updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am the co-founder of VIVA Finance. I am taking this class to learn how to code and help me to keep developers on our team accountable.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Atlanta, GA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love basketball and escape rooms.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Anything that can leave a lasting impact on the world.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Midtown Atlanta</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Coding is such a powerful skill that is highly sought after.</p>
     </section>
 
     <footer id="footer">
